k8s-apps/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: dashboard
    app.kubernetes.io/managed-by: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homepage.corp.mulliken.net
      secretName: homepage-tls
  rules:
    - host: homepage.corp.mulliken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
